@@ -1,3 +1,8 @@
+2009-04-08  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/39637
+	* g++.dg/cpp0x/variadic-crash2.C: New test.
+
 2009-04-06  Jason Merrill  <jason@redhat.com>
 
 	PR c++/35146
